Fix layout bug

--- a/src/views/MainContentPlaceholder/Menu.module.scss
+++ b/src/views/MainContentPlaceholder/Menu.module.scss
@@ -16,7 +16,7 @@
 }
 
 .carouselWrapper {
-  flex: 1 1;
+  flex: 1 1 !important;
 }
 
 .carousel {
